# KRStudio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  Grid.cpp  README.md  UIManager.cpp  resources.qrc  resources.qrc.autosave  vcpkg.json
.github/workflows/: linux.yml  mac.yml  win.yml
KRStudio/: CMakeLists.txt  dark_style.qss  main.cpp  mainwindow.cpp  mainwindow.h  propertiespanel.cpp  propertiespanel.h  propertiespanel.ui  resources.qrc  static_toolbar.ui
ads/demo/: MainWindow.cpp  main.cpp
ads/src/: FloatingDockContainer.cpp  ads_globals.cpp  ads_globals.h
docs/: API_DOCUMENTATION.md  CI.md  README.md  ROADMAP.md  YCB_DATASET.md  getting_started.md  rendering_api.md  scene_api.md  slam_api.md
docs/examples/: slam_example.md
icons/: app.icns
include/: Camera.hpp  DebugHelpers.hpp  DiagnosticsPanel.hpp  FieldSolver.hpp  FlowVisualizerMenu.hpp  GLContextGuard.hpp  Grid.hpp  Helpers.hpp  IntersectionSystem.hpp  KRobotWriter.hpp  MainWindow.hpp  Mesh.hpp  PreviewViewport.hpp  PrimitiveBuilders.hpp  PropertiesPanel.hpp  RenderingSystem.hpp  Robot.hpp  RobotDescription.hpp  SDFParser.hpp  Scene.hpp  SceneBuilder.hpp  Shader.hpp  StaticToolbar.hpp  UIManager.hpp  URDFParser.hpp  ViewportWidget.hpp  components.hpp  debug  gridPropertiesWidget.h
include/GraspHeaders/: CoacdCollider.hpp  GraspFilter.hpp  GraspGates.hpp  GraspMesh.hpp  GraspPhysicsConfig.hpp  GraspPlanner.hpp  GraspSim.hpp  GraspTaxonomy.hpp  GsoCatalog.hpp  YcbCatalog.hpp
include/NodeHeaders/: AINodes.hpp  AddNode.hpp  ArithmeticAndMathNodes.hpp  BridgeNodes.hpp  ConnectControlGate.hpp  ControlNodes.hpp  ControlSystemsNodes.hpp  DataConversionNodes.hpp  EvalEngine.hpp  ExecutionControlWidget.hpp  InteractionNodes.hpp  LinearAlgebraNodes.hpp  MqttNodes.hpp  Node.hpp  NodeDelegate.hpp  NodeEditQueue.hpp  NodeEditorGate.hpp  NodeFactory.hpp  NodePlannerArm.hpp  NodeWidgets.hpp  PerceptionNodes.hpp  PhysicsNodes.hpp  PortTypes.hpp  ProxyComboBox.hpp  RigidTransform.hpp  RobotGraph.hpp  RobotRef.hpp  SensorNodes.hpp  SignalProcessingNodes.hpp  StateSpaceNodes.hpp  StaticNodes.hpp  UtilityNodes.hpp  VisualNodes.hpp
include/ObjectHeaders/: Camera.hpp  GridLevel.hpp  Robot.hpp  Scene.hpp  SceneBuilder.hpp
include/PhysicsHeaders/: ArticulationGate.hpp  ArticulationSpec.hpp  AvoidanceField.hpp  ComputedTorque.hpp  ControllerGates.hpp  FanucArticulation.hpp  FemComponents.hpp  FemSolver.hpp  FemSystem.hpp  ImuExtrinsics.hpp  JointTooling.hpp  MotionPlanner.hpp  PlanningWorld.hpp  RevoluteFK.hpp  RobotBuilder.hpp  RobotBuilderScene.hpp  RobotConfig.hpp  RobotDynamics.hpp  RobotModel.hpp  SelfCollisionMatrix.hpp  SurrogateField.hpp  VisibleArticGate.hpp
include/RenderingHeaders/: CollisionDebugPass.hpp  CompositePass.hpp  Cubemap.hpp  DfsphBackend.hpp  EdgeDetectPass.hpp  FemVizPass.hpp  FidelityGates.hpp  FieldVisualizerPass.hpp  FluidCache.hpp  FluidMesher.hpp  FluidPass.hpp  FluidSurfacePass.hpp  FluidSystem.hpp  GBufferShaderSelect.hpp  GhostRobotPass.hpp  GizmoPass.hpp  GlassPass.hpp  GpuSdfEdt.hpp  GridPass.hpp  IFluidSolver.hpp  IPostProcessingPass.hpp  IRenderPass.hpp  IntegrationHarness.hpp  JointAxisPass.hpp  LightingPass.hpp  LtcMatrices.hpp  MaterialLoader.hpp  MpmPass.hpp  MpmSystem.hpp  OpaquePass.hpp  PointCloudPass.hpp  RenderUtils.hpp  RenderingSystem.hpp  SdfBaker.hpp  SdfColliderQuery.hpp  SelectionGlowPass.hpp  SelectionHighlightPass.hpp  Shader.hpp  SmokePass.hpp  SmokeSystem.hpp  (+3 more)
include/ResourcesHeaders/: ResourceManager.hpp  SceneQuery.hpp  Types.hpp
include/SLAMHeaders/: Backend.hpp  Frontend.hpp  SlamData.hpp  SlamManager.hpp  VoxelMap.hpp
include/SensorHeaders/: CameraModel.hpp  Composition.hpp  DepthModel.hpp  ImuModel.hpp  Layer2Gpis.hpp  MaterialField.hpp  RgbNoise.hpp  SensorGates.hpp  SensorProfile.hpp  SensorStats.hpp  TransferHarness.hpp
include/UIHeaders/: AssetBrowserWidget.hpp  CustomDataFlowScene.hpp  DatabasePanel.hpp  DiagnosticsPanel.hpp  DraggableNodeList.hpp  DroppableGraphicsView.hpp  FlowVisualizerMenu.hpp  FluidPropertiesWidget.hpp  GraphWidget.hpp  IMenu.hpp  JointPropertiesWidget.hpp  (+23 more)
packaging/: InnoSetup.iss  create-dmg.sh
scripts/: download_gso.py  download_ycb.sh  gen_coacd.py  gen_coacd_gso.py  mp_query.py
shaders/: EdgeDetect_frag.glsl  brdf_integration_frag.glsl  brdf_integration_vert.glsl  cap_frag.glsl  cap_geom.glsl  clear_frag.glsl  collision_debug_frag.glsl  collision_debug_vert.glsl  composite_frag.glsl  composite_simple_frag.glsl  debug_visualizer_frag.glsl  dummy_frag.glsl  dummy_vert.glsl  edge_detect_advanced_frag.glsl  edt_jfa_comp.glsl  edt_seed_comp.glsl  emissive_solid_frag.glsl  equirect_to_cubemap_frag.glsl  equirect_to_cubemap_vert.glsl  extract_bright_frag.glsl  fem_viz_frag.glsl  fem_viz_vert.glsl  field_visualizer_comp.glsl  flow_vector_update_comp.glsl  fluid_aniso_comp.glsl  fluid_caustics_apply_frag.glsl  fluid_caustics_comp.glsl  fluid_compact_comp.glsl  fluid_deltap_comp.glsl  fluid_finalize_comp.glsl  fluid_foam_accum_decay_frag.glsl  fluid_foam_accum_inject_frag.glsl  fluid_foam_accum_inject_vert.glsl  fluid_foam_emit_comp.glsl  fluid_foam_frag.glsl  fluid_foam_update_comp.glsl  fluid_foam_vert.glsl  fluid_grid_comp.glsl  fluid_integrate_comp.glsl  fluid_lambda_comp.glsl  (+94 more)
src/: BlackBox.cpp  Camera.cpp  CompositePass.cpp  DatabasePanel.cpp  DatabaseReplicationManager.cpp  DiagnosticsPanel.cpp  FieldSolver.cpp  FieldVisualizerPass.cpp  FlowVisualizerMenu.cpp  Grid.cpp  GridPass.cpp  IntersectionSystem.cpp  JointPropertiesWidget.cpp  KRobotParser.cpp  KRobotWriter.cpp  LinkPropertiesWidget.cpp  MainWindow.cpp  Mesh.cpp  OpaquePass.cpp  PreviewViewport.cpp  PropertiesPanel.cpp  RenderingSystem.cpp  Robot.cpp  RobotEnrichmentDialog.cpp  SDFParser.cpp  Scene.cpp  SceneBuilder.cpp  SelectionGlowPass.cpp  Shader.cpp  SplinePass.cpp  StaticToolbar.cpp  UIManager.cpp  ViewportWidget.cpp  flowVisualizerMenu.ui  flowVisualizerMenu.ui.autosave  gridPropertiesWidget.cpp  gridPropertiesWidget.ui  main.cpp  static_toolbar.ui  static_toolbar.ui.autosave
(+300 files in other folders)
